--- a/app/lang/ru.json
+++ b/app/lang/ru.json
@@ -14,7 +14,11 @@
     "description": "Описание",
     "email": "Электронная почта",
     "password": "Пароль",
+    "send": "Отправить",
+    "delete": "Удалить",
     "error.registration": "Произошла ошибка при регистрации",
     "error.user-exists": "Пользователь с таким адресом электронной почты уже существует",
-    "error.login": "Не удалось авторизоваться"
+    "error.login": "Не удалось авторизоваться",
+    "error.password-match": "Пароль не совпадает",
+    "error.email-match": "Электронная почта не совпадает"
 }
