add create page, edit page, catalog

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -16,6 +16,13 @@
     "password": "Password",
     "send": "Send",
     "delete": "Delete",
+    "edit": "Edit",
+    "add": "Add",
+    "add.product": "Add product",
+    "price": "Price",
+    "description.en": "Description in English",
+    "description.es": "Description in Spanish",
+    "description.ru": "Description in Russian",
     "error.registration": "An error occurred during registration",
     "error.user-exists": "A user with such an email already exists",
     "error.login": "Failed to login",
