--- a/app/lang/es.json
+++ b/app/lang/es.json
@@ -16,6 +16,13 @@
     "password": "Contraseña",
     "send": "Enviar",
     "delete": "Eliminar",
+    "edit": "Editar",
+    "add": "Añadir",
+    "add.product": "Añadir producto",
+    "price": "Precio",
+    "description.en": "Descripción en inglés",
+    "description.es": "Descripción en español",
+    "description.ru": "Descripción en ruso",
     "error.registration": "Error de registro",
     "error.user-exists": "Ya existe un usuario con dicho correo electrónico",
     "error.login": "Error al iniciar sesión",
