--- a/app/lang/ru.json
+++ b/app/lang/ru.json
@@ -16,6 +16,13 @@
     "password": "Пароль",
     "send": "Отправить",
     "delete": "Удалить",
+    "edit": "Редактировать",
+    "add": "Добавить",
+    "add.product": "Добавить товар",
+    "price": "Цена",
+    "description.en": "Описание на английском языке",
+    "description.es": "Описание на испанском языке",
+    "description.ru": "Описание на русском языке",
     "error.registration": "Произошла ошибка при регистрации",
     "error.user-exists": "Пользователь с таким адресом электронной почты уже существует",
     "error.login": "Не удалось авторизоваться",
